--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@ document.onkeydown = function (event) {
         }
     }
 /////////////////////end///////////////////////
+
+//////////////Disable Right Click///////////////////// 
 </script>
 <script type="text/javascript"> 
-<!-- 
-//Disable right click script 
-//visit http://www.rainbow.arch.scriptmania.com/scripts/ 
-var message="fuck off"; 
-/////////////////////////////////// 
+var message="nope"; 
 function clickIE() {if (document.all) {(message);return false;}} 
 function clickNS(e) {if 
 (document.layers||(document.getElementById&&!document.all)) { 
@@ -41,9 +39,9 @@ if (e.which==2||e.which==3) {(message);return false;}}}
 if (document.layers) 
 {document.captureEvents(Event.MOUSEDOWN);document.onmousedown=clickNS;} 
 else{document.onmouseup=clickNS;document.oncontextmenu=clickIE;} 
-document.oncontextmenu=new Function("return false") 
-// --> 
+/////////////////////end///////////////////////
 </script>
+
 <head>
 <title>k3k14</title>
 <link rel="stylesheet" href="css\style.css">
@@ -60,7 +58,7 @@ document.oncontextmenu=new Function("return false")
     | . \   ___) | | . \   | |    | |  
     |_|\_\ |____/  |_|\_\  |_|    |_|  
 
-| <a href="./files/">files</a> |
+| <a href="https://t.me/k3k14" target="_blank">Telegram</a> | <a href="https://t.me/k3k14" target="_blank">Telegram</a> | <a href="https://t.me/k3k14" target="_blank">Telegram</a>
 <p style="font-size:10px">[<marquee style="font-size:10px" behavior="scroll" direction="left" special="" scrollamount="3">time dismantles all things eventually</marquee>]</p>
 </span>
 </font>
