--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-﻿
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html>
  <script language="JavaScript">
@@ -58,7 +57,7 @@ else{document.onmouseup=clickNS;document.oncontextmenu=clickIE;}
     | . \   ___) | | . \   | |    | |  
     |_|\_\ |____/  |_|\_\  |_|    |_|  
 
-| <a href="https://t.me/k3k14" target="_blank">Telegram</a> | <a href="https://t.me/k3k14" target="_blank">Telegram</a> | <a href="https://t.me/k3k14" target="_blank">Telegram</a>
+| <a href="https://t.me/k3k14" target="_blank">Telegram</a> | <a href="https://github.com/k3k15" target="_blank">Github</a> | <a href="https://t.me/k3k14" target="_blank">Telegram</a> |
 <p style="font-size:10px">[<marquee style="font-size:10px" behavior="scroll" direction="left" special="" scrollamount="3">time dismantles all things eventually</marquee>]</p>
 </span>
 </font>
