Updated some visuals

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html>
- <script language="JavaScript">
+<script language="JavaScript">
 
 //////////F12 disable code////////////////////////
     document.onkeypress = function (event) {
@@ -45,21 +45,20 @@ else{document.onmouseup=clickNS;document.oncontextmenu=clickIE;}
 <title>k3k14</title>
 <link rel="stylesheet" href="css\style.css">
 <link rel="icon" href="images\anime.png">
-</head>
-<body>
-<pre><center>
-<img src="test.gif" style="width: 100px;">
-<font color="white">
-<span class="strokeme" style="font-size:16px;">   _  __  ____    _  __  __   _  _ 
-    | |/ / |___ \  | |/ / /_ | | || |  
-    | ' /    __) | | ' /   | | | || |_ 
-    |  <    |__ <  |  <    | | |__   _|
-    | . \   ___) | | . \   | |    | |  
-    |_|\_\ |____/  |_|\_\  |_|    |_|  
 
-| <a href="https://t.me/k3k1488" target="_blank">Telegram</a> | <a href="https://github.com/k3k15" target="_blank">Github</a> | <a href="https://t.me/k3k1488" target="_blank">Telegram</a> |
-<p style="font-size:10px">[<marquee style="font-size:10px" behavior="scroll" direction="left" special="" scrollamount="3">time dismantles all things eventually</marquee>]</p>
-</span>
+</head>
+<body class="noselect">
+<pre><center>
+<img src="images/giphy3.gif" style="width: 10%;">
+<font color="white">
+<span class="strokeme" style="font-size:16px;">_  __  ____    _  __  __   _  _ 
+ | |/ / |___ \  | |/ / /_ | | || |  
+ | ' /    __) | | ' /   | | | || |_ 
+ |  <    |__ <  |  <    | | |__   _|
+ | . \   ___) | | . \   | |    | |  
+ |_|\_\ |____/  |_|\_\  |_|    |_|  
+
+| <a href="https://t.me/k3k1488" target="_blank">Telegram</a> | <a href="https://github.com/k3k15" target="_blank">Github</a> | <a href="https://t.me/k3k1488" target="_blank">Telegram</a> |</span>
 </font>
 </center>
 </pre>
